# fastHDMI

./: .Rhistory  .gitignore  LICENSE  LM_SCAD_MCP_cp_MODULE.ipynb  LM_SCAD_MCP_np_MODULE-SNP.ipynb  LM_SCAD_MCP_np_MODULE-SNP_PCA.ipynb  LM_SCAD_MCP_np_MODULE-SNP_parallel.ipynb  LM_SCAD_MCP_np_MODULE.ipynb  LM_SCAD_MCP_np_cython_MODULE.ipynb  LM_SCAD_MCP_np_numba_MODULE.ipynb  README.md  logistic_SCAD_MCP_cp_MODULE.ipynb  logistic_SCAD_MCP_np_MODULE-SNP.ipynb  logistic_SCAD_MCP_np_MODULE-SNP_PCA.ipynb  logistic_SCAD_MCP_np_MODULE-SNP_parallel.ipynb  logistic_SCAD_MCP_np_MODULE.ipynb  logistic_SCAD_MCP_np_cython_MODULE.ipynb  logistic_SCAD_MCP_np_numba_MODULE.ipynb  plink_filtering_MODULE.ipynb  pyFFTW tests.ipynb  screening_MODULE.ipynb
MI_AG/: README.md  pyproject.toml
MI_AG/src/MI_AG/: MI_filtering.py  __init__.py
MI_AG/src/MI_AG/np/: np.py
MI_AG/tests/: test.py
MI_AG/tests/sim/: sim1.fam
fastHDMI/: MANIFEST.in  README.md  pyproject.toml  setup.py
fastHDMI/src/fastHDMI/: __init__.py  cython_fun.c  cython_fun.pyx
fastHDMI/tests/: test.py
fastHDMI/tests/sim/: sim1.bim
future implementation/cp/: cp.py
package/: pyproject.toml
paper/ABIDE_data_analysis/: ABIDE_MI_output.npy  ABIDE_PCA.py  ABIDE_PCA.sh  ABIDE_Pearson_output.npy  ABIDE_age_MI_biweight_scott_output.npy  ABIDE_age_MI_biweight_silverman_output.npy  ABIDE_age_MI_box_ISJ_output.npy  ABIDE_age_MI_box_scott_output.npy  ABIDE_age_MI_cosine_ISJ_output.npy  ABIDE_age_MI_cosine_scott_output.npy  ABIDE_age_MI_cosine_silverman_output.npy  ABIDE_age_MI_epa_ISJ_output.npy  ABIDE_age_MI_epa_scott_output.npy  ABIDE_age_MI_epa_silverman_output.npy  ABIDE_age_MI_exponential_ISJ_output.npy  ABIDE_age_MI_exponential_scott_output.npy  ABIDE_age_MI_exponential_silverman_output.npy  ABIDE_age_MI_gaussian_ISJ_output.npy  ABIDE_age_MI_gaussian_scott_output.npy  ABIDE_age_MI_gaussian_silverman_output.npy  ABIDE_age_MI_output.npy  ABIDE_age_MI_tri_ISJ_output.npy  ABIDE_age_MI_tri_scott_output.npy  ABIDE_age_MI_tri_silverman_output.npy  ABIDE_age_MI_tricube_ISJ_output.npy  ABIDE_age_MI_tricube_silverman_output.npy  ABIDE_age_MI_triweight_ISJ_output.npy  ABIDE_age_MI_triweight_scott_output.npy  ABIDE_age_MI_triweight_silverman_output.npy  ABIDE_age_Pearson_output.npy  ABIDE_age_binningMI_output.npy  ABIDE_age_skMI_output.npy  ABIDE_analysis.ipynb  ABIDE_analysis.py  ABIDE_analysis.sh  ABIDE_analysis_1.py  ABIDE_analysis_1.sh  ABIDE_analysis_2.py  ABIDE_analysis_2.sh  ABIDE_analysis_age.py  (+246 more)
paper/ABIDE_data_analysis/ABIDE/: ABIDE_age_MI_ElasticNetCV.py  ABIDE_age_MI_output.npy
paper/ABIDE_data_analysis/ABIDE_PCA/: ABIDE_PCA_analysis.ipynb  ABIDE_age_MI_biweight_silverman_output.npy  ABIDE_age_MI_box_silverman_output.npy  ABIDE_age_MI_cosine_silverman_output.npy  ABIDE_age_MI_epa_silverman_output.npy  ABIDE_age_MI_exponential_scott_output.npy  ABIDE_age_MI_gaussian_ISJ_output.npy  ABIDE_age_MI_tri_ISJ_output.npy  ABIDE_age_MI_tricube_ISJ_output.npy  ABIDE_age_MI_triweight_ISJ_output.npy  ABIDE_age_Pearson_output.npy  ABIDE_age_skMI_output.npy  ABIDE_columns.npy  ABIDE_diagnosis_MI_biweight_ISJ_output.npy  ABIDE_diagnosis_MI_biweight_scott_output.npy  ABIDE_diagnosis_MI_biweight_silverman_output.npy  ABIDE_diagnosis_MI_box_ISJ_output.npy  ABIDE_diagnosis_MI_box_scott_output.npy  ABIDE_diagnosis_MI_box_silverman_output.npy  ABIDE_diagnosis_MI_cosine_ISJ_output.npy  ABIDE_diagnosis_MI_cosine_scott_output.npy  ABIDE_diagnosis_MI_cosine_silverman_output.npy  ABIDE_diagnosis_MI_epa_ISJ_output.npy  ABIDE_diagnosis_MI_epa_scott_output.npy  ABIDE_diagnosis_MI_epa_silverman_output.npy  ABIDE_diagnosis_MI_exponential_scott_output.npy  ABIDE_diagnosis_MI_exponential_silverman_output.npy  ABIDE_diagnosis_MI_gaussian_ISJ_output.npy  ABIDE_diagnosis_MI_gaussian_scott_output.npy  ABIDE_diagnosis_MI_gaussian_silverman_output.npy  ABIDE_diagnosis_MI_tri_ISJ_output.npy  ABIDE_diagnosis_MI_tri_scott_output.npy  ABIDE_diagnosis_MI_tri_silverman_output.npy  ABIDE_diagnosis_MI_tricube_ISJ_output.npy  ABIDE_diagnosis_MI_tricube_scott_output.npy  ABIDE_diagnosis_MI_tricube_silverman_output.npy  ABIDE_diagnosis_MI_triweight_ISJ_output.npy  ABIDE_diagnosis_MI_triweight_scott_output.npy  ABIDE_diagnosis_Pearson_output.npy  (+20 more)
paper/UKBB_data_analysis/: bgen2bed_missing_and_not.sh
sim/: sim1.bed  sim1.bim  sim1.fam
(+7622 files in other folders)
