[build-system]
requires = ["setuptools>=61.0", "numpy>=1.14.2", "numba>=0.54.1", "KDEpy>=1.1.0", "bed_reader", "multiprocess>=0.70.6",  "bed-reader"]
build-backend = "setuptools.build_meta"

[project]
name = "MI_AG"
version = "0.6.12"
authors = [
  { name="Kai Yang", email="kai.yang2@mail.mcgill.ca" },
]
description = "Use mutual information and accelerated gradient method to filter out and optimize nonconvex sparse learning problems on large genetic data based on bed/bim/fam. Multiprocessing is now available."
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/Kaiyangshi-Ito/MI_AG"
"Bug Tracker" = "https://github.com/Kaiyangshi-Ito/MI_AG/issues"
