[build-system]
requires = [
    "setuptools>=46.4.0",
    "wheel>=0.34.2",
    "Cython>=0.29.21"
]
build-backend = "setuptools.build_meta"

[project]
name = "fastHDMI"
version = "1.23.28"
authors = [
  { name="Kai Yang", email="kai.yang2@mail.mcgill.ca" },
]
description = "Use fast FFT-based mutual information screening for large datasets. Works well on MRI brain imaging data. Developed by Kai Yang, [GPG Public key Fingerprint: CC02CF153594774CF956691492B2600D18170329](https://keys.openpgp.org/vks/v1/by-fingerprint/CC02CF153594774CF956691492B2600D18170329)"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
dependencies = [
    "numpy>=1.14.2",
    "numba>=0.54.1",
    "KDEpy>=1.1.0",
    "scikit-learn>=1.0.2",
#    "bed_reader",
    "multiprocess>=0.70.6",
#    "bed-reader",
    "pandas>=1.4.4",
#    "pyarrow>=8.0.0",
    "dask",
    "tqdm>=4.64.1",
    "Cython",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Operating System :: OS Independent",
]


[project.urls]
"Homepage" = "https://github.com/Kaiyangshi-Ito/fastHDMI"
"Bug Tracker" = "https://github.com/Kaiyangshi-Ito/fastHDMI/issues"
